styles/Layout.module.scss
/* ... */
// Medium devices (tablets, 768px and down)
@media (max-width: 768px) {

  %flex_shared_medium_screen {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 16px;
  }

  .container {
    .topbar_container {
      display: grid;
      grid-template-columns: 50px auto auto;
      align-items: center;
      height: 80px;
      background-color: $white;
      box-shadow: 0px 24px 48px 0 rgba(0, 0, 0, 0.04);
      position: sticky;
      top: 0;
      z-index: 2;

      .sidebar_toggle {
        display: block;
        width: fit-content;
        background: none;
        border: none;
      }

      .topbar_right_container {
        justify-self: flex-end;
        // padding: 0 0 0 25px;

        .topbar_input_box {
          display: none;
        }

        .topbar_profile_box {
          display: none;
        }

        .topbar_profile_box_mobile {
          display: block;
          position: relative;
          // border: 1px solid red;

          .dropdown_btn {
            display: flex;
            align-items: center;
          }

          .dropdown_content_mobile {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            position: absolute;
            right: 0;
            top: 55px;
            background-color: #f1f1f1;
            min-width: 250px;
            overflow: auto;
            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
            z-index: 1;
            padding: 15px 10px;
            text-align: left;
            transition: 0.5s;
            border-radius: 5px;
            // border: 1px solid red;

            .topbar_input_box_mobile {
              box-sizing: border-box;
              width: 230px;
              height: 35px;
              border-radius: 5px;
              position: relative;

              .topbar_input_mobile {
                width: 100%;
                height: 100%;
                border-radius: 5px;
                font-size: 14px;
                padding: 0 8px;
                outline: none;
                border: 1px solid grey;
              }

              .topbar_input_mobile:focus {
                outline: 1px solid $primary-color;
                border: none;
              }

              .topbar_input_icon_mobile {
                position: absolute;
                top: 0px;
                right: -18.5px;
                padding: 11.5px 15px;
                border-radius: 0 5px 5px 0;
                background-color: $primary-color;
                color: $white;
                cursor: pointer;
                // border: 2px solid red;
              }
            }
          }
        }
      }
    }

    .sidebar {
      display: none;
    }

    .show_sidebar {
      display: block;
      position: fixed;
      z-index: 1;
      top: 0;
      left: 0;
      width: 243px;
      bottom: 4px;
      min-height: 0 !important;
      background-color: $white;
      box-shadow: 0px 24px 48px 0 rgba(0, 0, 0, 0.04);
      overflow: scroll;

        .close_btn {
          display: block;
          font-size: 30px;
          font-weight: 700;
          display: flex;
          justify-content: flex-end;
          width: 85%;
        }

      //   .logo {
      //     display: none;
      //   }
      // }

      .flex_container_1 {
        @extend %flex_shared_medium_screen;
        margin-top: 20px;
        padding-left: 20px;
        // border: 1px solid red;

        p {
          margin: 0;
        }
      }

      .flex_container_2 {
        @extend %flex_shared_medium_screen;
        margin-top: 30px;
        padding: 5px 0 5px 20px;
        // border: 1px solid red;

        p {
          margin: 0;
        }
      }

      .nav_container {
        margin: 41px 0 0 0;
        // border: 1px solid red;

        .nav_heading {
          padding-left: 25px;
        }

        .nav_item {
          @extend %flex_shared_medium_screen;
          padding-left: 25px;
          // border: 1px solid red
        }

        .active_link {
          border-left: 3px solid $primary-color;
          background-color: $primary-color_active_link;
        }
      }

    }

    .hide_sidebar {
      display: none;
    }

    .layout {
      margin-left: 0px;
      position: relative;

      .main {
        padding: 20px;
        margin: 0;
      }

    }

  }
}


// Small devices (phones, 576px and down)
@media (max-width: 576px) {

  %flex_shared_small_screen {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 14px;
    color: #213F7D;
  }

  .container {
    .topbar_container {
      display: grid;
      grid-template-columns: 30px auto auto;
      padding: 0 15px 0 15px;

      .sidebar_toggle {
        display: block;
        width: fit-content;
        background: none;
        border: none;
      }

      .topbar_right_container {
        justify-self: flex-end;
        padding: 0 0 0 15px;

        .topbar_input_box {
          display: none;
        }

        .topbar_profile_box {
          display: none;
        }

      }
    }

    .sidebar {
      display: none;
    }

    .hide_sidebar {
      display: none;
    }

    .layout {
      margin-left: 0px;
      position: relative;

      .main {
        padding: 15px;
        margin: 0;
      }
    }

  }

}

